# Nightmare

./: LICENSE  README.md  build_windows.bat
.github/: lmao.yaml
c2/: README.md
c2/Install/: InstallScript.ps1
c2/Server/: IPPrintC2.ps1
core/: Nightmare.cpp  Nightmare.h  Nightmare.sln  Nightmare.vcxproj  Nightmare.vcxproj.filters  backdoor.cpp  backdoor.h  build_sfx.ps1  config.txt  cpp.hint  dllmain.cpp  nightmare_stub.ps1  ransom_not.html
core/poly/: CMakeLists.txt  beta_model.py  prompt.txt  readme  tool.cpp
dropper/: build_sfx.ps1  dropper.ps1  nightmare_stub.ps1  nsfw.7z  nsfw.img  nsfw.tar  nsfw.tar.tar.bz2
lab/: backdoor_access_persistence.csv  lolbins_anti_forensics.csv  lolbins_anti_forensics.txt  offline_backup_and_hardening_commands.txt  printer_google_dorks_case_example.txt  ransomware_lolbins_commands.txt  reg_hive_access.txt  threat-detection.yml  wipe.txt
lab/caldera/: deploy_caldera.sh
lab/caldera/plugin/: config.yaml
lab/logs/: export_logs.ps1
lab/logs/detections/: DNSResolutionFailures.yml  SuspiciousDNS.yara
lab/lolbins/: certutil.txt  rundll32_dump.txt  the_lolbas_project.json
lab/loldrivers/: 275c80c5-a67c-4536-b29e-4e481242cb01.md
lab/lolrmm/: AnyDesk.txt  psexec.txt  tv_registry.txt
